improve formatting and comments

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <!-- Heading -->
-    <h1 class="tsk-manager">Task Manager</h1>
+    <h1>Task Manager</h1>
+
     <!-- Navigation Button -->
     <button class="btn-style home-btn">Home</button>
     <button class="btn-style task-btn" id="getTaskBtn">Get Tasks</button>
