--- a/frontend/landingpage.html
+++ b/frontend/landingpage.html
@@ -20,17 +20,17 @@
           <div class="stats">
             <div class="stat-card">
               <h2>Total Tasks</h2>
-              <p id="totalTasks">1,234</p>
+              <p id="totalTasks">0</p>
             </div>
 
             <div class="stat-card">
               <h2>Completed</h2>
-              <p id="completedTasks">987</p>
+              <p id="completedTasks">0</p>
             </div>
 
             <div class="stat-card">
               <h2>Incomplete</h2>
-              <p id="incompleteTasks">247</p>
+              <p id="incompleteTasks">0</p>
             </div>
           </div>
 
@@ -42,11 +42,11 @@
       </header>
 
       <!-- Footer -->
-      <footer class="footer">
+      <!-- <footer class="footer">
         <p>&copy; 2025 Task Manager. All rights reserved.</p>
-      </footer>
+      </footer> -->
     </div>
 
-    <script src="./js/landing.js"></script>
+    <script type="module" src="./js/landing.js"></script>
   </body>
 </html>
